traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:8: error: value >- is not a member of Int
    if((posX<xMax)&&(posX>-1)) {
                         ^