traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  val xMax=getMondeLargeur()-1
  val yMax=getMondeHauteur()-1
  var posX = 0
  var posY = 0
  var compt = 0
  while(!((posX == xMax) && (posY == yMax))) {
    ecritMessage(compt)
    if((posX<xMax)&&(posX>-1)) {
      if  ((posY/2)==0) {
        posX += 1 }
      else {
        posX += -1
      }
    }
    else {
      posY += 1
    }
    setPos(posX,posY)
    compt += 1
  }
}

/*override def run() {
  val xMax=getMondeLargeur()
  val yMax=getMondeHauteur()
  for(n <- 0 to (xMax*yMax-1)) {
    setPos(n/yMax,n%xMax)
    ecritMessage(n)
  }
}*/